impliment handlebars and fix code that stopped working

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,9 +17,9 @@ a {
   color: #716D6D;
 }
 
-article:first-child {
+/*article:first-child {
   display: none;
-}
+}*/
 
 /******************** Nav *******************/
 
